[project]
name = "pyqt-llamaindex"
version = "0.0.11"
description = "Example of using LLamaIndex in Python desktop app"
readme = "README.md"
requires-python = ">=3.11, <3.14"
keywords = ["pyqt", "llamaindex", "openai"]
license = { text = "MIT" }
authors = [ { name = "Jung Gyu Yoon", email = "yjg30737@gmail.com" } ]
urls = { "Homepage" = "https://github.com/yjg30737/pyqt-llamaindex.git" }
dependencies = [
    "PyQt6",
    "llama-index (>=0.14.8,<0.15.0)",
    "chromadb (>=1.3.4,<2.0.0)",
    "llama-index-vector-stores-chroma (>=0.5.3,<0.6.0)",
    "llama-index-embeddings-huggingface (>=0.6.1,<0.7.0)",
    "llama-index-llms-ollama (>=0.9.0,<0.10.0)",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"